# py-unit-converter

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  main.py  pyproject.toml
frontend/: Dockerfile  index.html  nginx.conf
frontend/static/: script.js  styles.css
src/py_unit_converter/: config.py  depends.py  main.py
src/py_unit_converter/core/: depends.py
src/py_unit_converter/routers/: router.py
src/py_unit_converter/schemas/: conversion.py
src/py_unit_converter/services/: service.py
src/py_unit_converter/utils/: util.py
