[project]
name = "py-unit-converter"
version = "0.1.0"
description = "Веб-приложение для конвертации единиц измерения"
authors = [
    {name = "kavlan-dev"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]

[tool.poetry]
packages = [{include = "py_unit_converter", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
